# ChangeLog for net-libs/gnutls
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.369 2012/06/10 05:26:49 radhermit Exp $

  10 Jun 2012; Tim Harder <radhermit@gentoo.org> -gnutls-3.0.19.ebuild:
  Remove old.

  10 Jun 2012; Tim Harder <radhermit@gentoo.org> gnutls-2.12.18.ebuild,
  gnutls-2.12.19.ebuild:
  Drop -Werror flag from all relevant configure files.

  10 Jun 2012; Tim Harder <radhermit@gentoo.org> gnutls-2.12.18.ebuild,
  gnutls-2.12.19.ebuild:
  Don't make automake warnings into errors.

  09 Jun 2012; Tim Harder <radhermit@gentoo.org> gnutls-3.0.20.ebuild:
  Don't make automake warnings into errors.

  06 Jun 2012; Tim Harder <radhermit@gentoo.org> -gnutls-3.0.18.ebuild:
  Remove old.

*gnutls-3.0.20 (06 Jun 2012)

  06 Jun 2012; Tim Harder <radhermit@gentoo.org> +gnutls-3.0.20.ebuild:
  Version bump.

  28 May 2012; Fabian Groffen <grobian@gentoo.org> gnutls-2.12.19.ebuild,
  gnutls-3.0.19.ebuild:
  Transferred Prefix keywords, fixed for Prefix

  10 May 2012; Tim Harder <radhermit@gentoo.org> -gnutls-2.10.5.ebuild:
  Remove old, insecure version.

  09 May 2012; Matt Turner <mattst88@gentoo.org> gnutls-2.12.19.ebuild:
  Added ~mips, bug 402959.

*gnutls-2.12.19 (07 May 2012)

  07 May 2012; Tim Harder <radhermit@gentoo.org> +gnutls-2.12.19.ebuild:
  Version bump.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> gnutls-2.12.18.ebuild,
  gnutls-3.0.18.ebuild, gnutls-3.0.19.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> gnutls-2.12.18.ebuild:
  keyword ~amd64-fbsd

  22 Apr 2012; Tim Harder <radhermit@gentoo.org> -gnutls-3.0.16.ebuild:
  Remove old.

*gnutls-3.0.19 (22 Apr 2012)

  22 Apr 2012; Tim Harder <radhermit@gentoo.org> +gnutls-3.0.19.ebuild:
  Version bump.

  16 Apr 2012; Brent Baude <ranger@gentoo.org> gnutls-2.12.18.ebuild:
  Marking gnutls-2.12.18 ppc for bug 409287
